--- a/src/style/_main.scss
+++ b/src/style/_main.scss
@@ -1,23 +1,133 @@
 .main {
-  margin-top: 15vh;
-
   width: 100%;
-  height: 85vh;
-  background-image: url("./images/mainImage.jpg");
+  height: 100vh;
+  background-image: url("./images/fundoMainLeft.png");
   background-repeat: no-repeat;
-  background-size: cover;
-  background-position: center;
+  background-size: 80%;
+  display: flex;
+  flex-direction: row;
+  .main-left {
+    width: 50%;
+    height: 100%;
+    display: flex;
+    flex-direction: column;
+    align-items: start;
+    .aspas-main {
+      margin-top: 35%;
+      margin-left: 33%;
+      height: 6rem;
+      width: 6rem;
+      background-image: url("./images/aspas-main.webp");
+      background-position: center;
+      background-size: contain;
+      background-repeat: no-repeat;
+    }
+    h1 {
+      margin-left: 34%;
+      font-size: 1.4rem;
+      font-weight: 100;
+    }
+    .textHidden {
+      visibility: initial;
+    }
+    & > div {
+      margin-left: 30%;
+      margin-top: 30px;
+      display: flex;
+      flex-direction: row;
+      justify-content: end;
+      a {
+        margin-left: 30px;
+        margin-top: 0px;
+        background-color: rgb(141, 27, 27);
+        border-radius: 15px 0 15px 0;
+        padding: 0.3rem 4rem;
+        color: aliceblue;
+        transition: 0.7s;
+        cursor: pointer;
+        &:hover {
+          background-color: transparent;
+          border-radius: 0 15px 0 15px;
+          padding: 0.3rem 4rem;
+          color: rgb(141, 27, 27);
+          border: 1px solid rgb(141, 27, 27);
+        }
+      }
+    }
+  }
+  .main-right {
+    width: 50%;
+    height: 100%;
+    margin-left: 0px;
+    background-image: url("./images/Ana.webp");
+    background-repeat: no-repeat;
+    background-position: bottom;
+    background-size: 55%;
+  }
 }
 
 @media (max-width: 600px) {
   .main {
-    margin-top: 0vh;
-
-    width: 100%;
-    height: 100vh;
-    background-image: url("./images/mainMobileImage.png");
-    background-repeat: no-repeat;
-    background-size: cover;
-    background-position: center;
+    background-image: url("./images/anaLogo.png");
+    background-size: 80%;
+    display: flex;
+    flex-direction: column;
+    .main-left {
+      width: 70%;
+      height: 100%;
+      display: flex;
+      flex-direction: column;
+      align-items: start;
+      .aspas-main {
+        margin-top: 50%;
+        margin-left: 5%;
+        height: 4rem;
+        width: 4rem;
+        background-image: url("./images/aspas-main.webp");
+        background-position: center;
+        background-size: contain;
+        background-repeat: no-repeat;
+      }
+      h1 {
+        margin-left: 5%;
+        font-size: 1rem;
+      }
+      .textHidden {
+        visibility: hidden;
+      }
+      & > div {
+        margin-left: 0%;
+        margin-top: 30px;
+        display: flex;
+        flex-direction: column;
+        justify-content: end;
+        a {
+          margin-left: 5px;
+          margin-top: 3px;
+          background-color: rgb(141, 27, 27);
+          border-radius: 15px 0 15px 0;
+          padding: 0.3rem 3rem;
+          color: aliceblue;
+          transition: 0.7s;
+          cursor: pointer;
+          &:hover {
+            background-color: transparent;
+            border-radius: 0 15px 0 15px;
+            padding: 0.3rem 4rem;
+            color: rgb(141, 27, 27);
+            border: 1px solid rgb(141, 27, 27);
+          }
+        }
+      }
+    }
+    .main-right {
+      margin-left: 110px;
+      width: 70%;
+      height: 60%;
+      background-image: url("./images/Ana.webp");
+      background-repeat: no-repeat;
+      background-position: bottom;
+      background-size: 55%;
+    }
   }
 }
