--- a/src/style/_navbar.scss
+++ b/src/style/_navbar.scss
@@ -5,8 +5,7 @@
   top: 0;
   left: 0;
   display: flex;
-  background-color: rgba(243, 243, 243, 0.85);
-  background-image: url("./images/paper.png");
+  background-color: rgba(255, 255, 255, 0.95);
   background-position: center;
   background-repeat: no-repeat;
   background-size: cover;
@@ -16,9 +15,8 @@
     align-items: center;
     display: flex;
     justify-content: end;
-    h1 {
-      font-size: 2.8rem;
-      font-weight: 800;
+    img {
+      width: 45%;
     }
   }
   .navbar {
