--- a/src/App.css
+++ b/src/App.css
@@ -80,6 +80,10 @@
   margin-left: 34%;
   font-size: 1.4rem;
   font-weight: 100;
+  background-color: rgb(255, 255, 255);
+  border-radius: 0 0 0 0;
+  color: black;
+  padding: 10px;
 }
 .main .main-left .textHidden {
   visibility: initial;
@@ -143,8 +147,12 @@
     background-repeat: no-repeat;
   }
   .main .main-left h1 {
-    margin-left: 5%;
+    margin-left: 2%;
     font-size: 1rem;
+    background-color: rgb(141, 27, 27);
+    border-radius: 15px 0 15px 0;
+    color: white;
+    padding: 10px;
   }
   .main .main-left .textHidden {
     visibility: hidden;
