--- a/src/style/_main.scss
+++ b/src/style/_main.scss
@@ -26,6 +26,10 @@
       margin-left: 34%;
       font-size: 1.4rem;
       font-weight: 100;
+      background-color: rgb(255, 255, 255);
+      border-radius: 0 0 0 0;
+      color: black;
+      padding: 10px;
     }
     .textHidden {
       visibility: initial;
@@ -89,8 +93,12 @@
         background-repeat: no-repeat;
       }
       h1 {
-        margin-left: 5%;
+        margin-left: 2%;
         font-size: 1rem;
+        background-color: rgb(141, 27, 27);
+        border-radius: 15px 0 15px 0;
+        color: white;
+        padding: 10px;
       }
       .textHidden {
         visibility: hidden;
