--- a/src/App.scss
+++ b/src/App.scss
@@ -3,3 +3,7 @@
   "./style/livroComponent", "./style/eventos", "./style/contacto",
   "./style/comentario", "./style/eventoComponent", "./style/footer",
   "./style/readMore", "./style/_eventosInfoPage";
+
+* {
+  border: 1px solid green;
+}
