--- a/src/style/_main.scss
+++ b/src/style/_main.scss
@@ -26,10 +26,6 @@
       margin-left: 34%;
       font-size: 1.4rem;
       font-weight: 100;
-      background-color: rgb(255, 255, 255);
-      border-radius: 0 0 0 0;
-      color: black;
-      padding: 10px;
     }
     .textHidden {
       visibility: initial;
@@ -76,12 +72,13 @@
     background-size: 80%;
     display: flex;
     flex-direction: column;
+    align-items: center;
     .main-left {
       width: 70%;
       height: 80%;
       display: flex;
       flex-direction: column;
-      align-items: start;
+      align-items: center;
       .aspas-main {
         margin-top: 50%;
         margin-left: 5%;
@@ -95,17 +92,13 @@
       h1 {
         margin-left: 2%;
         font-size: 1rem;
-        background-color: rgb(141, 27, 27);
-        border-radius: 15px 0 15px 0;
-        color: white;
-        padding: 10px;
       }
       .textHidden {
         visibility: hidden;
       }
       & > div {
         margin-left: 0%;
-        margin-top: 5px;
+        margin-top: 0px;
         display: flex;
         flex-direction: column;
         justify-content: end;
@@ -129,13 +122,12 @@
       }
     }
     .main-right {
-      margin-left: 110px;
       width: 70%;
       height: 60%;
       background-image: url("./images/Ana.webp");
       background-repeat: no-repeat;
       background-position: bottom;
-      background-size: 75%;
+      background-size: 65%;
     }
   }
 }
