--- a/src/style/_main.scss
+++ b/src/style/_main.scss
@@ -26,6 +26,7 @@
       margin-left: 34%;
       font-size: 1.4rem;
       font-weight: 100;
+      text-align: left;
     }
     .textHidden {
       visibility: initial;
@@ -92,6 +93,7 @@
       h1 {
         margin-left: 2%;
         font-size: 1rem;
+        text-align: center;
       }
       .textHidden {
         visibility: hidden;
