--- a/src/App.css
+++ b/src/App.css
@@ -80,7 +80,7 @@
   margin-left: 34%;
   font-size: 1.4rem;
   font-weight: 100;
-  text-align: left;
+  text-align: justify;
 }
 .main .main-left .textHidden {
   visibility: initial;
@@ -123,6 +123,7 @@
   .main {
     background-image: url("./images/anaLogo.png");
     background-size: 80%;
+    background-position: top;
     display: flex;
     flex-direction: column;
     align-items: center;
