--- a/src/style/_main.scss
+++ b/src/style/_main.scss
@@ -26,7 +26,7 @@
       margin-left: 34%;
       font-size: 1.4rem;
       font-weight: 100;
-      text-align: left;
+      text-align: justify;
     }
     .textHidden {
       visibility: initial;
@@ -71,6 +71,7 @@
   .main {
     background-image: url("./images/anaLogo.png");
     background-size: 80%;
+    background-position: top;
     display: flex;
     flex-direction: column;
     align-items: center;
