--- a/src/style/_main.scss
+++ b/src/style/_main.scss
@@ -106,6 +106,7 @@
         justify-content: end;
         a {
           margin-left: 0px;
+          text-align: center;
           margin-top: 3px;
           background-color: rgb(141, 27, 27);
           border-radius: 15px 0 15px 0;
