update background css

--- a/src/style/_contacto.scss
+++ b/src/style/_contacto.scss
@@ -1,7 +1,7 @@
 .contacto {
   width: 100%;
   min-height: 60vh;
-  background-image: url("./images/paper.png");
+  // background-image: url("./images/paper.png");
   background-position: center;
   background-repeat: no-repeat;
   background-size: cover;
