--- a/src/style/_sobre.scss
+++ b/src/style/_sobre.scss
@@ -7,7 +7,7 @@
   flex-direction: column;
   justify-content: center;
   align-items: center;
-  background-image: url("./images/paper.png");
+  // background-image: url("./images/paper.png");
   background-position: center;
   background-repeat: no-repeat;
   background-size: cover;
