--- a/src/index.css
+++ b/src/index.css
@@ -21,6 +21,10 @@
   width: 100vw;
 }
 
+html {
+  height: -webkit-fill-available;
+}
+
 a {
   font-weight: 500;
   color: #646cff;
@@ -36,6 +40,7 @@ body {
   display: flex;
   color: rgb(19, 19, 19);
   background-color: #ffffff;
+  height: -webkit-fill-available;
 }
 
 h1 {
