--- a/src/App.css
+++ b/src/App.css
@@ -126,6 +126,7 @@
     display: flex;
     flex-direction: column;
     align-items: center;
+    border-bottom: 1px solid rebeccapurple;
   }
   .main .main-left {
     width: 70%;
