--- a/src/style/_main.scss
+++ b/src/style/_main.scss
@@ -74,6 +74,7 @@
     display: flex;
     flex-direction: column;
     align-items: center;
+    border-bottom: 1px solid rebeccapurple;
     .main-left {
       width: 70%;
       height: 60%;
