--- a/src/App.css
+++ b/src/App.css
@@ -126,7 +126,7 @@
     display: flex;
     flex-direction: column;
     align-items: center;
-    border-bottom: 1px solid rebeccapurple;
+    border-bottom: 1px solid rgb(141, 27, 27);
   }
   .main .main-left {
     width: 70%;
