--- a/src/style/_main.scss
+++ b/src/style/_main.scss
@@ -74,7 +74,7 @@
     display: flex;
     flex-direction: column;
     align-items: center;
-    border-bottom: 1px solid rebeccapurple;
+    border-bottom: 1px solid rgb(141, 27, 27);
     .main-left {
       width: 70%;
       height: 60%;
