--- a/src/App.css
+++ b/src/App.css
@@ -200,9 +200,12 @@
 .livros > h1 {
   margin-top: 1vh;
   margin-bottom: 1vh;
-  font-size: 2.2rem;
+  font-size: 2.5rem;
   text-align: center;
   color: rgb(141, 27, 27);
+  font-family: "Style Script", cursive;
+  text-transform: capitalize;
+  font-weight: 800;
 }
 .livros .livros-container {
   width: 75vw;
