--- a/src/style/_livros.scss
+++ b/src/style/_livros.scss
@@ -13,9 +13,12 @@
   & > h1 {
     margin-top: 1vh;
     margin-bottom: 1vh;
-    font-size: 2.2rem;
+    font-size: 2.5rem;
     text-align: center;
     color: rgb(141, 27, 27);
+    font-family: "Style Script", cursive;
+    text-transform: capitalize;
+    font-weight: 800;
   }
   .livros-container {
     width: 75vw;
