--- a/src/style/_eventosInfoPage.scss
+++ b/src/style/_eventosInfoPage.scss
@@ -24,6 +24,10 @@
       margin: 5px;
       background-color: black;
       background-position: center;
+      transition: 0.4s;
+      &:hover {
+        width: 290px;
+      }
     }
   }
   a {
@@ -73,6 +77,9 @@
         margin: 5px;
         background-color: black;
         background-position: center;
+        &:hover {
+          width: 300px;
+        }
       }
     }
     a {
