--- a/src/App.css
+++ b/src/App.css
@@ -354,7 +354,7 @@
     margin-bottom: 50px;
     width: 100%;
     font-size: 1.2rem;
-    text-align: justify;
+    text-align: center;
   }
 }
 .eventos {
