--- a/src/style/_sobre.scss
+++ b/src/style/_sobre.scss
@@ -73,7 +73,7 @@
           margin-bottom: 50px;
           width: 100%;
           font-size: 1.2rem;
-          text-align: justify;
+          text-align: center;
         }
       }
     }
