--- a/src/App.css
+++ b/src/App.css
@@ -227,7 +227,6 @@
   min-height: 60vh;
   display: flex;
   justify-content: space-between;
-  border-top: 1px solid rgb(141, 27, 27);
   flex-wrap: wrap;
 }
 
@@ -263,7 +262,6 @@
   height: 70%;
   display: flex;
   justify-content: space-between;
-  border-top: 1px solid rgb(255, 255, 255);
   flex-direction: row;
 }
 
@@ -306,7 +304,6 @@
   height: 70%;
   display: flex;
   justify-content: space-between;
-  border-top: 1px solid rgb(141, 27, 27);
   display: flex;
   flex-direction: row;
 }
@@ -371,8 +368,11 @@
   font-size: 2.2rem;
   color: white;
   text-align: center;
-  border-bottom: 1px solid rgb(255, 255, 255);
   margin-inline: 25vw;
+}
+.eventos hr {
+  margin: 0 auto;
+  margin-top: 5px;
 }
 .eventos > div {
   margin-bottom: 100px;
@@ -400,6 +400,10 @@
     text-align: center;
     border-bottom: 1px solid rgb(255, 255, 255);
     margin-inline: 25vw;
+  }
+  .eventos hr {
+    margin: 0 auto;
+    margin-top: 5px;
   }
   .eventos > div {
     margin-bottom: 100px;
@@ -429,7 +433,6 @@
   height: 70%;
   display: flex;
   justify-content: space-between;
-  border-top: 1px solid rgb(141, 27, 27);
 }
 .contacto .contactoContainer a {
   width: 23%;
@@ -548,8 +551,11 @@
   font-size: 2.2rem;
   color: white;
   text-align: center;
-  border-bottom: 1px solid rgb(255, 255, 255);
   margin-inline: 25vw;
+}
+.eventos hr {
+  margin: 0 auto;
+  margin-top: 5px;
 }
 .eventos > div {
   margin-bottom: 100px;
@@ -577,6 +583,10 @@
     text-align: center;
     border-bottom: 1px solid rgb(255, 255, 255);
     margin-inline: 25vw;
+  }
+  .eventos hr {
+    margin: 0 auto;
+    margin-top: 5px;
   }
   .eventos > div {
     margin-bottom: 100px;
@@ -606,7 +616,6 @@
   height: 70%;
   display: flex;
   justify-content: space-between;
-  border-top: 1px solid rgb(141, 27, 27);
 }
 .contacto .contactoContainer a {
   width: 23%;
