--- a/src/style/_eventos.scss
+++ b/src/style/_eventos.scss
@@ -11,8 +11,11 @@
     font-size: 2.2rem;
     color: white;
     text-align: center;
-    border-bottom: 1px solid rgb(255, 255, 255);
     margin-inline: 25vw;
+  }
+  hr {
+    margin: 0 auto;
+    margin-top: 5px;
   }
   & > div {
     margin-bottom: 100px;
@@ -41,6 +44,10 @@
       text-align: center;
       border-bottom: 1px solid rgb(255, 255, 255);
       margin-inline: 25vw;
+    }
+    hr {
+      margin: 0 auto;
+      margin-top: 5px;
     }
     & > div {
       margin-bottom: 100px;
