--- a/src/style/_main.scss
+++ b/src/style/_main.scss
@@ -26,7 +26,7 @@
       margin-left: 34%;
       font-size: 1.4rem;
       font-weight: 100;
-      text-align: justify;
+      text-align: left;
     }
     .textHidden {
       visibility: initial;
