--- a/src/App.css
+++ b/src/App.css
@@ -80,7 +80,7 @@
   margin-left: 34%;
   font-size: 1.4rem;
   font-weight: 100;
-  text-align: justify;
+  text-align: left;
 }
 .main .main-left .textHidden {
   visibility: initial;
