--- a/src/style/_contacto.scss
+++ b/src/style/_contacto.scss
@@ -15,6 +15,12 @@
     color: rgb(141, 27, 27);
     margin-top: 2vh;
   }
+  hr {
+    width: 8vw;
+    height: 1.2px;
+    color: rgba(141, 27, 27);
+    background-color: rgba(141, 27, 27);
+  }
   .contactoContainer {
     width: 40%;
     height: 70%;
@@ -53,13 +59,19 @@
       color: rgb(141, 27, 27);
       margin-top: 0vh;
     }
+    hr {
+      width: 30vw;
+      height: 1.5px;
+      color: rgba(141, 27, 27);
+      background-color: rgba(141, 27, 27);
+    }
     .contactoContainer {
       width: 80%;
       height: 70%;
       display: flex;
       flex-wrap: wrap;
       justify-content: space-between;
-      border-top: 1px solid rgb(141, 27, 27);
+
       a {
         width: 42%;
         margin: 0.5rem 0.5rem;
