--- a/src/style/_eventos.scss
+++ b/src/style/_eventos.scss
@@ -14,6 +14,10 @@
     margin-inline: 25vw;
   }
   hr {
+    width: 8vw;
+    height: 1.2px;
+    color: white;
+    background-color: white;
     margin: 0 auto;
     margin-top: 5px;
   }
@@ -42,10 +46,11 @@
       font-size: 2.5rem;
       color: white;
       text-align: center;
-      border-bottom: 1px solid rgb(255, 255, 255);
       margin-inline: 25vw;
     }
     hr {
+      width: 30vw;
+      height: 1.5px;
       margin: 0 auto;
       margin-top: 5px;
     }
