--- a/src/style/_livros.scss
+++ b/src/style/_livros.scss
@@ -16,6 +16,14 @@
     font-size: 2.2rem;
     text-align: center;
     color: rgb(141, 27, 27);
+    hr {
+      width: 8vw;
+      height: 1.2px;
+      color: rgba(141, 27, 27);
+      background-color: rgba(141, 27, 27);
+      margin: 0 auto;
+      margin-top: 5px;
+    }
   }
   .livros-container {
     width: 75vw;
@@ -32,7 +40,12 @@
     & > h1 {
       margin-top: 5vh;
       margin-bottom: 3vh;
+      hr {
+        width: 30vw;
+        height: 1.5px;
+      }
     }
+
     .livros-container {
       justify-content: center;
     }
