--- a/src/style/_naMidia.scss
+++ b/src/style/_naMidia.scss
@@ -12,6 +12,12 @@
     font-size: 2.2rem;
     color: white;
   }
+  hr {
+    width: 8vw;
+    height: 1.2px;
+    color: white;
+    background-color: white;
+  }
   .naMidiaContainer {
     width: 80%;
     height: 70%;
@@ -29,6 +35,10 @@
     & > h1 {
       font-size: 2.6rem;
       margin-top: 20px;
+    }
+    hr {
+      width: 30vw;
+      height: 1.5px;
     }
     .naMidiaContainer {
       width: 60%;
