--- a/src/style/_contacto.scss
+++ b/src/style/_contacto.scss
@@ -23,7 +23,7 @@
   }
   .contactoContainer {
     width: 40%;
-    height: 70%;
+    height: 50%;
     display: flex;
     justify-content: space-between;
     a {
@@ -39,6 +39,11 @@
         width: 100%;
       }
     }
+  }
+  .btnContactos {
+    font-size: 2.7rem;
+    color: rgba(141, 27, 27);
+    margin-top: -10vh;
   }
 }
 
@@ -85,6 +90,11 @@
           width: 100%;
         }
       }
+    }
+    .btnContactos {
+      margin-top: -2vh;
+      font-size: 2rem;
+      color: rgba(141, 27, 27);
     }
   }
 }
