--- a/src/style/_contacto.scss
+++ b/src/style/_contacto.scss
@@ -41,9 +41,12 @@
     }
   }
   .btnContactos {
-    font-size: 2.7rem;
-    color: rgba(141, 27, 27);
-    margin-top: -10vh;
+    font-size: 2rem;
+    color: white;
+    background-color: rgba(141, 27, 27);
+    padding: 5px;
+    border-radius: 1px;
+    margin-top: -7vh;
   }
 }
 
