--- a/src/App.css
+++ b/src/App.css
@@ -493,9 +493,12 @@
   width: 100%;
 }
 .contacto .btnContactos {
-  font-size: 2.7rem;
-  color: rgb(141, 27, 27);
-  margin-top: -10vh;
+  font-size: 2rem;
+  color: white;
+  background-color: rgb(141, 27, 27);
+  padding: 5px;
+  border-radius: 1px;
+  margin-top: -7vh;
 }
 
 @media (max-width: 600px) {
@@ -702,9 +705,12 @@
   width: 100%;
 }
 .contacto .btnContactos {
-  font-size: 2.7rem;
-  color: rgb(141, 27, 27);
-  margin-top: -10vh;
+  font-size: 2rem;
+  color: white;
+  background-color: rgb(141, 27, 27);
+  padding: 5px;
+  border-radius: 1px;
+  margin-top: -7vh;
 }
 
 @media (max-width: 600px) {
