--- a/src/style/_contacto.scss
+++ b/src/style/_contacto.scss
@@ -96,8 +96,8 @@
     }
     .btnContactos {
       margin-top: -2vh;
-      font-size: 2rem;
-      color: rgba(141, 27, 27);
+      font-size: 1.5rem;
+      color: white;
     }
   }
 }
